@@ -34,8 +34,12 @@ x <- -150:150/100
 X <- model.matrix(B, data = data.frame(x = x))
 plot(x, x^2, type = "l", col = "red")
 lines(x, X %*% cf)
-### also f' is linearily extrapolated since 0.0-33
+###  f' is constant outside support
 Xp <- model.matrix(B, data = data.frame(x = x), deriv = c(x = 1L))
+plot(x, 2 * x, type = "l", col = "red")
+lines(x, Xp %*% cf)
+### also f' is linearily extrapolated if maxderiv > 1
+Xp <- model.matrix(B, data = data.frame(x = x), deriv = c(x = 1L), maxderiv = 2L)
 plot(x, 2 * x, type = "l", col = "red")
 lines(x, Xp %*% cf)
 
